4B/cs444/tests/pass/pass_package.joos
/* pass: package */
package dovs.joos.features;

public class A {
  public A() {}
  protected int x;
}

