4B/cs444/tests/fail/fail_packageprivatefields.joos
/* fail: package private fields */
package dovs.joos.features;

public class A {
  /* package private */ int x;
}

